--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
+    "clipboard": "2.0.4",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
@@ -23,7 +24,9 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "echarts": "4.2.1",
+    "vue-echarts": "5.0.0-beta.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
